# cpp-regmap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  guide.md
include/regmap/: alufix.h  alufix_types.h  bitset.h  bus.h  endianfix.h  memoizer.h  register.h  register_utils.h  regmap.h  utils.h
test/: CMakeLists.txt  compileSize.cpp  doctest.h  regmap_test.cpp  regmap_test_compile_sz.dump.txt  static_tests.cpp  test_common.h  utility_tests.cpp
